# a-look-outside

./: .gitignore  README.md  config.yaml  ideia.md  main.py  mise.toml  pyproject.toml  road.md
project/progam/: GUIA_TUI.md  IMPLEMENTACAO_TREINO.md  TUI_README.md  exemplo_uso_balanceamento.py  exemplo_uso_tui.py  main.py  pyproject.toml  tui_interactive.py
project/progam/datasets/: __init__.py  carregador.py  pipelines.py  preparador.py
project/progam/datasets/balanceadores/: __init__.py  adasyn.py  (+6 more)
project/progam/models/: base.py  mobilenet.py  treinador.py  vit.py
project/progam/tui/: __init__.py  app.py  telas.py
project/progam/utils/: doc_generator.py
projeto/: .fed  .gitignore  config.yaml  explain-me-dnb.md  main.py  mise.toml  pyproject.toml  referencias
projeto/.obsidian/: workspace.json
projeto/dataset/: __init__.py  carregador.py  dataset_pytorch.py
projeto/docs/: analise-2.md  analise-consolidada.md  analise.md
projeto/modelos/: __init__.py  _avaliacao_padrao.py  _transfer_learning.py  base.py  treinador.py
projeto/modelos/cnn/: __init__.py  avaliacao.py  config.py  execucao.py  modelo.py  treino.py  xai.py
projeto/modelos/dino/: __init__.py  ajuste_fino.py  avaliacao.py  config.py  execucao.py  modelo.py  pre_treino.py  treino.py  xai.py
projeto/modelos/efficientnet/: __init__.py  avaliacao.py  config.py  execucao.py  modelo.py  treino.py  xai.py
projeto/modelos/multimodal/: __init__.py  avaliacao.py  config.py  execucao.py  modelo.py  treino.py  xai.py
projeto/modelos/resnet50/: __init__.py  avaliacao.py  config.py  execucao.py  modelo.py  treino.py  xai.py
projeto/modelos/vgg16/: __init__.py  avaliacao.py  config.py  distilacao.py  execucao.py  finetuning.py  modelo.py  treino.py  xai.py
projeto/modelos/vit/: __init__.py  avaliacao.py  config.py  execucao.py  modelo.py  treino.py  xai.py
projeto/pipeline/: pipeline_estado_arte.py  vgg_datasets.py
projeto/pre_processamento/: __init__.py  aumento_de_dados.py  balanceamento.py  config.py  divisao_treino_teste.py  fusao_datasets.py  normalizacao.py  upscale.py
projeto/utils/: __init__.py  amostragem_dataset.py  checkpoint.py  config_loader.py  experimento.py  logger.py  metricas.py  recursos.py  reproducibilidade.py  tta.py  visualizacao.py  xai_gradcam.py
(+132 files in other folders)
