[project]
name = "a-look-outside"
version = "0.1.0"
description = "Galaxy morphological classification with dataset balancing, ML pipelines and XAI artifacts."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "h5py>=3.11",
    "numpy>=1.26,<3.0",
    "scikit-learn>=1.5",
    "imbalanced-learn>=0.12",
    "pyyaml>=6.0",
    "inquirerpy>=0.3.4",
    "rich>=13.7",
    "torch>=2.5",
    "torchvision>=0.20",
    "timm>=1.0",
    "psutil>=6.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pandas>=2.2",
    "tabulate>=0.9",
    "joblib>=1.4",
    "grad-cam>=1.5",
    "albumentations>=2.0.8",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
