[project]
name = "galaxy-classification"
version = "0.1.0"
description = "Classificação morfológica de galáxias com CNN, ResNet, ViT, DINO e Multimodal"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "timm>=1.0.0",
    "h5py>=3.10.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
    "colorama>=0.4.6",
    "PyYAML>=6.0",
    "InquirerPy>=0.3.4",
]

[project.optional-dependencies]
xai = ["shap>=0.44.0"]
dev = ["pytest>=8.0.0", "pytest-cov", "ruff"]

[project.scripts]
galaxy-classification = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*", "pre_processamento*", "dataset*", "modelos*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
