[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "h5py>=3.16.0",
    "matplot>=0.1.9",
    "numpy>=1.24.0",
    "scikit-learn>=1.4.0",
    "psutil>=5.9.0",
    "textual>=0.50.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
]
